# voxel

./: README.md
vox/: .gitignore  Makefile.am  configure.ac  configure.vox
vox/executables/: Makefile.am
vox/executables/vox/: Makefile.am  vox_control.cpp  vox_control.hpp  vox_main.cpp  vox_main.hpp  vox_misc.cpp  vox_misc.hpp  vox_player.cpp  vox_player.hpp  vox_sensor.cpp  vox_sensor.hpp  vox_vision.cpp  vox_vision.hpp  vox_voice.cpp  vox_voice.hpp
vox/libraries/: Makefile.am
vox/libraries/exception/: Makefile.am  exception.cpp  exception.hpp
vox/libraries/log/: Makefile.am  trace.cpp  trace.hpp
vox/libraries/mjpg_plugin/input_uvc/: Makefile  v4l2uvc.c
vox/libraries/mjpg_plugin/output_http/: Makefile  httpd.c  httpd.cpp  output_http.c  output_http.cpp
vox/libraries/motor/: Makefile.am  pwm.cpp  pwm.hpp  servo.cpp  servo.hpp  step.cpp  step.hpp
vox/libraries/motor/unittest/: Makefile.am  test_motor.cpp
vox/libraries/rapidjson/: writer.h
vox/libraries/rapidjson/unittest/: .gitignore  Makefile.am  test_rapidjson.cpp
vox/libraries/sensor/: Makefile.am  dht.cpp  dht.hpp  usonic.cpp  usonic.hpp
vox/libraries/sensor/unittest/: Makefile.am  test_sensor.cpp
vox/libraries/socket/: Makefile.am  epoll.cpp  epoll.hpp  socket.cpp  socket.hpp
vox/libraries/thread/: Makefile.am  autolock.cpp  autolock.hpp  event.cpp  event.hpp  thread.cpp  thread.hpp
vox/libraries/util/: Makefile.am  util.cpp  util.hpp
vox/libraries/util/unittest/: Makefile.am  test_util.cpp
vox/libraries/wiring/: wiring_init.hpp
www/starwars/: crawling.html
www/voxel/: gateway.html  kiosk.php  remocon.php
www/voxel/css/: main.css  style.css
www/voxel/handle/: control.php  status.php  video.php
www/voxel/js/: common.js
www/voxel/lib/: conf.inc  func.inc
